# opendubs-core

./: .gitignore  .gitmodules  README.md  setup.cfg
config/: robot_params.yaml
launch/: robot.launch.py
opendubs-core/src/data_logging/rosbags/bag_20260329_002904/: metadata.yaml  recovered_remp_0.mcap
opendubs-core/src/data_logging/rosbags/temp/: metadata.yaml  temp_0.mcap
scripts/: create_udev_rules.sh  opendubs.rules
src/data_logging/: package.xml  setup.py
src/data_logging/config/: data_logging.yaml
src/data_logging/data_logging/: bag_recorder.py
src/data_logging/launch/: bag_recorder_launch.py
src/descriptors/: CMakeLists.txt  package.xml
src/descriptors/launch/: display.launch.py  display_launch.py  tf_publisher.launch.py  tf_publisher_launch.py
src/descriptors/sdf/: open_dubs_description.sdf
src/descriptors/src/: odom_tf_broadcaster.cpp
src/descriptors/urdf/: open_dubs_description.urdf
src/diagnostics/: package.xml  setup.py
src/diagnostics/config/: diagnostics.yaml
src/diagnostics/launch/: diagnostics_launch.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/srv/: LoggerCommand.srv
src/ll_control/: CMakeLists.txt  package.xml
src/ll_control/include/ll_control/: ll_control_node.hpp  pid_controller.hpp  pixhawk_processing_node.hpp
src/ll_control/launch/: ll_control_launch.py
src/ll_control/src/: ll_control_node.cpp  optical_flow_LED_control.cpp  pixhawk_processing_node.cpp
src/main/: package.xml  setup.py
src/main/config/: robot_params.yaml
src/main/launch/: apm.launch  localization_launch.py  mavros_launch.py  robot_launch.py  sensor_launch.py
src/main/main/: ekf_initializer.py  lidar_merger.py
src/main/scripts/: wait_and_load_mavros_params.sh
src/teleop_interface/: package.xml  setup.py
src/teleop_interface/launch/: teleop_interface_launch.py
src/teleop_interface/teleop_interface/: api_node.py  api_router.py  controller_interface.py
teleop_interface/: package.xml  setup.cfg
teleop_interface/launch/: teleop_interface_launch.py
teleop_interface/teleop_interface/: teleop_interface.py
