<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_interface</name>
  <version>0.0.0</version>
  <description>RC input handler: maps RCIn to Twist setpoints and control mode for ll_control.</description>
  <maintainer email="rzghosh@gmail.com">rgnp</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>mavros_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
